style: fix carousel caption alignment

--- a/theme/base/static/smart.css
+++ b/theme/base/static/smart.css
@@ -577,11 +577,16 @@ li .badge {
     color: hsl(142, 76%, 36%)
 }
 
+.scbs-carousel-control-next, .scbs-carousel-control-prev {
+    width: auto !important;
+    top: 90% !important
+}
+
 .scbs-carousel-indicators [data-bs-target] {
     box-sizing: border-box !important;
-    width: 10px !important;
-    height: 10px !important;
-    margin: auto 5px !important;
+    width: 0.5rem !important;
+    height: 0.5rem !important;
+    margin: 0.25rem !important;
     background-color: hsl(var(--accent-foreground)) !important;
     border-top: none !important;
     border-bottom: none !important;
@@ -590,6 +595,20 @@ li .badge {
 }
 
 .scbs-carousel-caption {
-    display: none !important;
-    font-size: 0 !important
+    bottom: 2.5rem !important;
+    right: 0 !important;
+    left: 0 !important;
+    position: relative !important;
+    padding-bottom: 0 !important;
+    padding-top: 0 !important
+}
+
+.scbs-carousel h5 {
+    letter-spacing: initial;
+    font-weight: 400 !important;
+    color: hsl(var(--muted-foreground)) !important;
+    font-size: .875rem;
+    margin-inline: auto;
+    max-width: 80%;
+    line-height: 1.25rem
 }
